Rename deluge-config volume to deluge-data

--- a/ansible/install_applications/roles/download-deluge.deploy/app/deploy/persistentVolumeClaim.yaml.j2
+++ b/ansible/install_applications/roles/download-deluge.deploy/app/deploy/persistentVolumeClaim.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: deluge-config-pv-claim
+  name: deluge-data-pv-claim
   namespace: {{ deluge.namespace }}
   labels:
     {{ deluge.labels_def | to_nice_yaml() | indent(4) }}
