Add option du configure deluge web ui password

--- a/ansible/install_applications/roles/download-deluge.deploy/app/deploy/web-statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-deluge.deploy/app/deploy/web-statefulset.yaml.j2
@@ -49,6 +49,8 @@ spec:
           value: "false"
         - name: "DELUGE_CONF_WEB_BASE"
           value: "{{ deluge_web.context_root }}"
+        - name: "DELUGE_WEB_PASSWORD"
+          value: "{{ deluge_web.password }}"
         securityContext:
           runAsNonRoot: true
           runAsUser: 1000 # deluge
