--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -139,9 +139,7 @@ watchers:
     image: {{ sickchill.base_image.name }}
     tag: {{ sickchill.base_image.tag }}
     includes:
-      - amd64.*
-    excludes:
-      - amd64-latest
+      - 2\.[7-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
   
   ###############
   # Apps : Home #
