--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -140,6 +140,8 @@ watchers:
     tag: {{ sickchill.base_image.tag }}
     includes:
       - 2\.[7-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
+    excludes:
+      - .*-alpine3\.10
   
   ###############
   # Apps : Home #
@@ -527,3 +529,5 @@ watchers:
     tag: {{ ttrss_pgsql.base_image.tag }}
     includes:
       - ^11\.[0-9]+(\.[0-9]+)?-alpine
+
+  
