--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -122,25 +122,39 @@ watchers:
     repo: {{ pyload.repo.name }}
     branch: {{ pyload.repo.branch }}
     commit: {{ pyload.repo.commit }}
-  - type: docker_registry
+  - name: SABnzbd Baseimage
+    type: docker_registry
     repo: {{ sabnzbd.base_image.repo | default('registry-1.docker.io') }}
     image: {{ sabnzbd.base_image.name }}
     tag: {{ sabnzbd.base_image.tag }}
     includes:
-      - amd64.*
+      - 2\.[7-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
     excludes:
-      - amd64-unstable
-      - amd64-latest
-      - .*(rc[0-9]|alpha|beta).*
-      - amd64-[0-1]\..*
-      - amd64-2\.[0-2]\..*
-  - type: docker_registry
+      - .*-alpine3\.[0-9]$
+      - .*-alpine3\.10
+  - name: SABnzbd
+    type: github_release
+    repo: {{ sabnzbd.repo.name }}
+    release: {{ sabnzbd.repo.version }}
+    excludes:
+      - .*(RC|Beta).*
+  - name: SABnzbd par2cmdline
+    type: github_release
+    repo: {{ sabnzbd.par2cmdline.repo.name }}
+    release: {{ sabnzbd.par2cmdline.repo.version }}
+  - name: SABnzbd nzbToMedia
+    type: github_release
+    repo: {{ sabnzbd.nzbToMedia.repo.name }}
+    release: {{ sabnzbd.nzbToMedia.repo.version }}
+  - name: Sickchill Baseimage
+    type: docker_registry
     repo: {{ sickchill.base_image.repo | default('registry-1.docker.io') }}
     image: {{ sickchill.base_image.name }}
     tag: {{ sickchill.base_image.tag }}
     includes:
       - 2\.[7-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
     excludes:
+      - .*-alpine3\.[0-9]$
       - .*-alpine3\.10
   
   ###############
