--- a/ansible/install_applications/roles/stream-jellyfin.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/stream-jellyfin.deploy/app/deploy/statefulSet.yaml.j2
@@ -18,12 +18,30 @@ spec:
         {{ jellyfin.labels_def | to_nice_yaml() | indent(8) }}
         {{ jellyfin.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
+      initContainers:
+      - name: create-folders
+        image: "{{ busybox.container.image }}"
+        imagePullPolicy: Always
+        command:
+          - "sh"
+          - "-c"
+          - |
+            mkdir -p /jellyfin/config
+            mkdir -p /jellyfin/cache
+            chown -R 1000:1000 /jellyfin
+        volumeMounts:
+        - name: jellyfin-pv-claim
+          mountPath: /jellyfin
       containers:
       - image: "{{ jellyfin.container.image }}"
         name: jellyfin
         ports:
         - containerPort: 8096
           name: jellyfin
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 1000
+          readOnlyRootFilesystem: true
         readinessProbe:
           httpGet:
             scheme: HTTP
@@ -41,12 +59,13 @@ spec:
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
-        - name: jellyfin-data-pv-claim
+        - name: jellyfin-pv-claim
           mountPath: /config
-        - name: jellyfin-cache-pv-claim
-          mountPath: /cache
+          subPath: config
         - name: jellyfin-multimedia
           mountPath: /media
+        - name: tmp-volume
+          mountPath: /tmp
       volumes:
       - name: tz-config
         hostPath:
@@ -54,11 +73,13 @@ spec:
       - name: jellyfin-multimedia
         persistentVolumeClaim:
           claimName: nfs-multimetia
+      - name: tmp-volume
+        emptyDir: {}
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
   - metadata:
-      name: jellyfin-data-pv-claim
+      name: jellyfin-pv-claim
     spec:
       accessModes: [ "ReadWriteOnce" ]
       storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
@@ -68,16 +89,3 @@ spec:
       selector:
         matchLabels:
           {{ jellyfin.labels_def | to_nice_yaml() | indent(10) }}
-          storage: data
-  - metadata:
-      name: jellyfin-cache-pv-claim
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
-      resources:
-        requests:
-          storage: 128M
-      selector:
-        matchLabels:
-          {{ jellyfin.labels_def | to_nice_yaml() | indent(10) }}
-          storage: cache
