Disable embedded Alertmanager and Grafana

--- a/ansible/install_applications/roles/dev-gitlab.deploy/app/config/gitlab.rb.j2
+++ b/ansible/install_applications/roles/dev-gitlab.deploy/app/config/gitlab.rb.j2
@@ -1583,7 +1583,7 @@ prometheus['enable'] = false
 ## Prometheus Alertmanager
 ################################################################################
 
-# alertmanager['enable'] = true
+alertmanager['enable'] = false
 # alertmanager['home'] = '/var/opt/gitlab/alertmanager'
 # alertmanager['log_directory'] = '/var/log/gitlab/alertmanager'
 # alertmanager['admin_email'] = 'admin@example.com'
@@ -1693,7 +1693,7 @@ gitlab_exporter['listen_port'] = '9168'
 ##! Docs: https://docs.gitlab.com/ee/administration/monitoring/prometheus/#prometheus-as-a-grafana-data-source
 ################################################################################
 
-# grafana['enable'] = true
+grafana['enable'] = false
 # grafana['log_directory'] = '/var/log/gitlab/grafana'
 # grafana['home'] = '/var/opt/gitlab/grafana'
 # grafana['admin_password'] = 'admin'
