--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -46,6 +46,9 @@ watchers:
     repo: coreos/flannel
     branch: master
     commit: 960b3243b9a7faccdfe7b3c09097105e68030ea7
+  - type: github_release
+    repo: projectcalico/calico
+    release: v3.13.0
 
 
   ###############
