--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -519,7 +519,9 @@ watchers:
     image: {{ ttrss.base_image.name }}
     tag: {{ ttrss.base_image.tag }}
     includes:
-      - '[0-9]+\.[0-9]+.[0-9]+-apache-buster'
+      - '[7-9]+\.[0-9]+.[0-9]+-apache-buster'
+    excludes:
+      - 7\.[0-3]\..*
   - name: TT-RSS
     type: raw_html
     page_url: https://git.tt-rss.org/fox/tt-rss/commits/master
