--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/prometheus.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/prometheus.yaml.j2
@@ -12,8 +12,7 @@ spec:
     - name: alertmanager-k8s
       namespace: {{ prometheus.namespace }}
       port: web
-  baseImage: "{{ prometheus.base_image.repo }}/{{ prometheus.base_image.name }}"
-  version: "{{ prometheus.base_image.tag }}"
+  image: "{{ prometheus.container.image }}"
   podMetadata:
     labels:
       {{ prometheus.labels_def | to_nice_yaml() | indent(6) }}
