--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/clusterRole.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/clusterRole.yaml.j2
@@ -2,6 +2,9 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: kube-state-metrics
+  labels:
+    {{ kube_state_metrics.labels_def | to_nice_yaml() | indent(4) }}
+    {{ kube_state_metrics.labels_desc | to_nice_yaml() | indent(4) }}
 rules:
 - apiGroups:
   - ""
@@ -86,6 +89,29 @@ rules:
   - storage.k8s.io
   resources:
   - storageclasses
+  - volumeattachments
+  verbs:
+  - list
+  - watch
+- apiGroups:
+  - admissionregistration.k8s.io
+  resources:
+  - mutatingwebhookconfigurations
+  - validatingwebhookconfigurations
+  verbs:
+  - list
+  - watch
+- apiGroups:
+  - networking.k8s.io
+  resources:
+  - networkpolicies
+  verbs:
+  - list
+  - watch
+- apiGroups:
+  - coordination.k8s.io
+  resources:
+  - leases
   verbs:
   - list
   - watch
