--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/clusterRoleBinding.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/clusterRoleBinding.yaml.j2
@@ -2,6 +2,9 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: kube-state-metrics
+  labels:
+    {{ kube_state_metrics.labels_def | to_nice_yaml() | indent(4) }}
+    {{ kube_state_metrics.labels_desc | to_nice_yaml() | indent(4) }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
