--- a/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/clusterRole.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/clusterRole.yaml.j2
@@ -2,6 +2,9 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: node-exporter
+  labels:
+    {{ node_exporter.labels_def | to_nice_yaml() | indent(4) }}
+    {{ node_exporter.labels_desc | to_nice_yaml() | indent(4) }}
 rules:
 - apiGroups:
   - authentication.k8s.io
