--- a/ansible/install_applications/roles/_base.deploy/templates/namespace/deny-all-ingress-networkPolicy.yaml.j2
+++ b/ansible/install_applications/roles/_base.deploy/templates/namespace/deny-all-ingress-networkPolicy.yaml.j2
@@ -10,4 +10,7 @@ spec:
   podSelector: {}
 
   # Deny all ingress
-  ingress: []
+  # Not defining the ingress list has the same result as having an empty list
+  # However, setting the empty list is detected as a change every time
+  # (k8s doesn't return the ingress property when the list is empty -> detected as changed)
+  #ingress: []
