--- a/ansible/install_infra/roles/kubernetes-master-cni-deploy/templates/calico/calico.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes-master-cni-deploy/templates/calico/calico.yaml.j2
@@ -621,6 +621,9 @@ spec:
             # Auto-detect the BGP IP address.
             - name: IP
               value: "autodetect"
+            # Skip wireguard interface
+            - name: IP_AUTODETECTION_METHOD
+              value: skip-interface=wg.*
             # Enable IPIP
             - name: CALICO_IPV4POOL_IPIP
               value: "Always"
