Allow multiple virtual ips on a keepalived instance

--- a/ansible/install_infra/roles/keepalived/templates/instance.conf.j2
+++ b/ansible/install_infra/roles/keepalived/templates/instance.conf.j2
@@ -25,6 +25,8 @@ vrrp_instance {{ keepalived_instance.name }} {
         auth_pass {{ keepalived_instance.auth_pass }}
     }
     virtual_ipaddress {
-        {{ keepalived_instance.virtual_ip }}
+{% for virtual_ip in keepalived_instance.virtual_ips %}
+        {{ virtual_ip }}
+{% endfor %}
     }
 }
